--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,8 @@
     <modules>
         <module>merchant-service</module>
         <module>merchant-ws</module>
+        <module>merchant-persistence</module>
+        <module>admin-ws</module>
     </modules>
 
     <parent>
@@ -31,6 +33,14 @@
         <mybatis.spring.version>1.3.0</mybatis.spring.version>
         <com.zaxxer.HikariCP>2.7.8</com.zaxxer.HikariCP>
         <redis.clients.jedis>2.9.0</redis.clients.jedis>
+        <spring.version>4.3.14.RELEASE</spring.version>
+        <mysql.connector.version>5.1.37</mysql.connector.version>
+        <org.mybatis.version>3.4.0</org.mybatis.version>
+        <mybatis.spring.version>1.3.0</mybatis.spring.version>
+        <com.zaxxer.HikariCP>2.7.8</com.zaxxer.HikariCP>
+        <commons.lang3.version>3.4</commons.lang3.version>
+        <slf4j.version>1.7.12</slf4j.version>
+        <log4j.version>1.2.17</log4j.version>
     </properties>
 
     <dependencyManagement>
