--- a/merchant-ws/src/main/resources/application.yml
+++ b/merchant-ws/src/main/resources/application.yml
@@ -3,8 +3,18 @@ spring:
     name: Merchant
   profiles:
     active: dev
+  jackson:
+    date-format: io.swagger.RFC3339DateFormat
+#    serialization.WRITE_DATES_AS_TIMESTAMPS: false
 server:
   port: 8080
+  context-path: /v2
+
+springfox:
+  documentation:
+    swagger:
+      v2:
+        path: /api-docs
 
 
 
