--- a/pom.xml
+++ b/pom.xml
@@ -20,11 +20,12 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.5.10.RELEASE</version>
+        <version>1.5.13.RELEASE</version>
     </parent>
 
     <properties>
-        <org.springframework.boot>1.5.10.RELEASE</org.springframework.boot>
+        <org.springframework.boot>1.5.13.RELEASE</org.springframework.boot>
+        <springfox-version>2.8.0</springfox-version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <com.google.guava.version>24.0-jre</com.google.guava.version>
         <com.alibaba.fastjson.version>1.2.46</com.alibaba.fastjson.version>
