--- a/admin-ws/pom.xml
+++ b/admin-ws/pom.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
+
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
@@ -11,7 +12,8 @@
 
     <modelVersion>4.0.0</modelVersion>
     <artifactId>admin-ws</artifactId>
-    <name>admin-ws</name>
+    <packaging>war</packaging>
+    <name>admin-ws Maven Webapp</name>
 
     <dependencies>
         <dependency>
