--- a/merchant-service/pom.xml
+++ b/merchant-service/pom.xml
@@ -19,6 +19,10 @@
             <artifactId>merchant-persistence</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
