--- a/merchant-ws/src/main/resources/application.yml
+++ b/merchant-ws/src/main/resources/application.yml
@@ -15,10 +15,11 @@ springfox:
       v2:
         path: /api-docs
 
-
-
 logging:
   config: classpath:logback-spring.xml
+
+mybatis:
+  mapper-locations: classpath*:/mybatis/mapper/*.xml,/mybatis/mapper/manual/*.xml
 
 #springfox.documentation.swagger.v2.path=/api-docs
 #server.contextPath=/v2
