--- a/pom.xml
+++ b/pom.xml
@@ -24,64 +24,70 @@
     </parent>
 
     <properties>
-        <org.springframework.boot>1.5.10.RELEASE</org.springframework.boot>
-        <springfox-version>2.7.0</springfox-version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <springfox-version>2.7.0</springfox-version>
         <com.google.guava.version>24.0-jre</com.google.guava.version>
         <com.alibaba.fastjson.version>1.2.46</com.alibaba.fastjson.version>
         <mysql.connector.version>5.1.37</mysql.connector.version>
-        <org.mybatis.version>3.4.0</org.mybatis.version>
-        <mybatis.spring.version>1.3.0</mybatis.spring.version>
         <com.zaxxer.HikariCP>2.7.8</com.zaxxer.HikariCP>
         <redis.clients.jedis>2.9.0</redis.clients.jedis>
-        <spring.version>4.3.14.RELEASE</spring.version>
         <mysql.connector.version>5.1.37</mysql.connector.version>
-        <org.mybatis.version>3.4.0</org.mybatis.version>
-        <mybatis.spring.version>1.3.0</mybatis.spring.version>
-        <com.zaxxer.HikariCP>2.7.8</com.zaxxer.HikariCP>
         <commons.lang3.version>3.4</commons.lang3.version>
         <slf4j.version>1.7.12</slf4j.version>
         <log4j.version>1.2.17</log4j.version>
+        <mybatis.spring.boot.version>1.3.2</mybatis.spring.boot.version>
     </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+            <version>${mybatis.spring.boot.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <!-- JDBC数据库 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-jdbc</artifactId>
+        </dependency>
+
+        <!-- redis -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+
+        <!-- RabbitMQ -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
+
+        <!--工具类-->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
     <dependencyManagement>
         <dependencies>
-            <!-- web -->
-            <dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-starter-web</artifactId>
-            </dependency>
-
-            <!-- JDBC数据库 -->
-            <dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-starter-jdbc</artifactId>
-            </dependency>
-
-            <!-- redis -->
-            <dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-starter-data-redis</artifactId>
-            </dependency>
-
-            <!-- RabbitMQ -->
-            <dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-starter-amqp</artifactId>
-            </dependency>
-
-            <dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-starter-aop</artifactId>
-            </dependency>
-
-            <!--工具类-->
-            <dependency>
-                <groupId>junit</groupId>
-                <artifactId>junit</artifactId>
-                <version>3.8.1</version>
-                <scope>test</scope>
-            </dependency>
             <dependency>
                 <groupId>com.google.guava</groupId>
                 <artifactId>guava</artifactId>
@@ -100,16 +106,6 @@
                 <version>${mysql.connector.version}</version>
             </dependency>
             <dependency>
-                <groupId>org.mybatis</groupId>
-                <artifactId>mybatis</artifactId>
-                <version>${org.mybatis.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.mybatis</groupId>
-                <artifactId>mybatis-spring</artifactId>
-                <version>${mybatis.spring.version}</version>
-            </dependency>
-            <dependency>
                 <groupId>com.zaxxer</groupId>
                 <artifactId>HikariCP</artifactId>
                 <version>${com.zaxxer.HikariCP}</version>
@@ -121,8 +117,13 @@
                 <artifactId>jedis</artifactId>
                 <version>${redis.clients.jedis}</version>
             </dependency>
+
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-lang3</artifactId>
+                <version>${commons.lang3.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
-
 
 </project>
