--- a/merchant-persistence/pom.xml
+++ b/merchant-persistence/pom.xml
@@ -51,12 +51,39 @@
             <plugin>
                 <groupId>org.mybatis.generator</groupId>
                 <artifactId>mybatis-generator-maven-plugin</artifactId>
-                <version>1.3.3</version>
+                <version>1.3.5</version>
+                <executions>
+                    <execution>
+                        <id>Generate MyBatis Artifacts</id>
+                        <goals>
+                            <goal>generate</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <verbose>true</verbose>
+                    <overwrite>true</overwrite>
+                    <!--<jdbcDriver>com.mysql.jdbc.Driver</jdbcDriver>-->
+                    <!--<jdbcURL>jdbc:mysql://127.0.0.1:3306/merchant</jdbcURL>-->
+                    <!--<jdbcUserId>root</jdbcUserId>-->
+                    <!--<jdbcPassword>123456</jdbcPassword>-->
+                </configuration>
                 <dependencies>
+                    <dependency>
+                        <groupId>mysql</groupId>
+                        <artifactId>mysql-connector-java</artifactId>
+                        <version>5.1.46</version>
+                    </dependency>
                     <dependency>
                         <groupId>com.mcipay</groupId>
                         <artifactId>mybatis-page</artifactId>
                         <version>1.0-SNAPSHOT</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.mybatis</groupId>
+                        <artifactId>mybatis</artifactId>
+                        <!-- 引用依赖库的版本 -->
+                        <version>3.4.6</version>
                     </dependency>
                 </dependencies>
             </plugin>
