--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,7 @@
         <slf4j.version>1.7.12</slf4j.version>
         <log4j.version>1.2.17</log4j.version>
         <mybatis.spring.boot.version>1.3.2</mybatis.spring.boot.version>
+        <hibernate.validator.version>5.1.3.Final</hibernate.validator.version>
     </properties>
 
     <dependencies>
@@ -143,6 +144,12 @@
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-lang3</artifactId>
                 <version>${commons.lang3.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.hibernate</groupId>
+                <artifactId>hibernate-validator</artifactId>
+                <version>${hibernate.validator.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
